--- a/local/Dockerfile
+++ b/local/Dockerfile
@@ -2,6 +2,10 @@ FROM tray/java:8-jre
 
 RUN /usr/bin/curl -L http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest.tar.gz | /bin/tar xz
 
+RUN mv /etc/apt/sources.list /etc/apt/sources.list.bak && \
+    echo "deb http://deb.debian.org/debian jessie main" >/etc/apt/sources.list && \
+    echo "deb http://security.debian.org/debian-security jessie/updates main" >>/etc/apt/sources.list
+
 RUN apt-get update && \
     apt-get install -y \
         python3 \
