--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
     "lint:fix": "standard --fix",
     "init-db": "node src/init-db.js",
     "mock-challenge-api": "NODE_ENV=test node mock/mock-challenge-api",
-    "test": "nyc --reporter=html --reporter=text mocha test/unit/test.js --timeout 20000 --exit",
-    "e2e": "nyc --reporter=html --reporter=text mocha test/e2e/test.js --timeout 20000 --exit"
+    "test": "nyc --reporter=html --reporter=text mocha test/unit/test.js --require test/common/prepare.js --timeout 20000 --exit",
+    "e2e": "nyc --reporter=html --reporter=text mocha test/e2e/test.js --require test/common/prepare.js --timeout 20000 --exit"
   },
   "author": "TCSCODER",
   "license": "none",
   "devDependencies": {
     "should": "^13.2.3",
     "mocha": "^5.2.0",
-    "nyc": "^13.3.0",
-    "standard": "^12.0.1"
+    "mocha-prepare": "^0.1.0",
+    "nyc": "^14.0.0",
+    "standard": "^12.0.1",
+    "nock": "^10.0.6"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.15.1",
     "config": "^3.0.1",
     "cors": "^2.7.1",
-    "dynamoose": "^1.6.4",
-    "express": "^4.14.0",
+    "dynamoose": "^1.7.2",
+    "express": "^4.16.4",
     "express-interceptor": "^1.2.0",
     "get-parameter-names": "^0.3.0",
     "http-json-response": "^1.0.1",
@@ -35,6 +37,7 @@
     "lodash": "^4.17.11",
     "superagent": "^4.1.0",
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6",
+    "tc-bus-api-wrapper": "topcoder-platform/tc-bus-api-wrapper.git",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
   },
