--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "standard",
     "lint:fix": "standard --fix",
     "init-db": "node src/init-db.js",
+    "init-es": "node src/init-es.js",
     "drop-tables": "node src/scripts/drop-tables.js",
     "create-tables": "node src/scripts/create-tables.js",
     "seed-tables": "node src/scripts/seed-tables.js",
@@ -27,21 +28,24 @@
     "nock": "^10.0.6"
   },
   "dependencies": {
+    "aws-sdk": "^2.572.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.15.1",
     "config": "^3.0.1",
     "cors": "^2.7.1",
     "dynamoose": "^1.7.2",
+    "elasticsearch": "^16.5.0",
     "express": "^4.16.4",
     "express-interceptor": "^1.2.0",
     "get-parameter-names": "^0.3.0",
+    "http-aws-es": "^6.0.0",
     "http-json-response": "^1.0.1",
     "http-status-codes": "^1.3.0",
     "joi": "^14.0.0",
     "lodash": "^4.17.11",
     "superagent": "^4.1.0",
-    "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.2",
     "tc-bus-api-wrapper": "topcoder-platform/tc-bus-api-wrapper.git",
+    "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.2",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
   },
