--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "joi": "^14.0.0",
     "lodash": "^4.17.11",
     "superagent": "^4.1.0",
-    "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.2",
+    "swagger-ui-express": "^4.1.3",
     "tc-bus-api-wrapper": "topcoder-platform/tc-bus-api-wrapper.git",
+    "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.2",
     "uuid": "^3.3.2",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "yamljs": "^0.3.0"
   },
   "engines": {
     "node": "10.x"
