Associate resource creation with challenge state

--- a/docs/dev.env
+++ b/docs/dev.env
@@ -16,6 +16,7 @@
   MEMBER_API_URL: '',
   USER_API_URL: '',
   CHALLENGE_API_URL: '',
+  CHALLENGE_PHASES_API_URL: '',
 
   DYNAMODB: {
     AWS_ACCESS_KEY_ID: '',
