--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -5,3 +5,9 @@ services:
     ports:
       - "7777:7777"
     command: "-inMemory -port 7777"
+  esearch:
+    image: "docker.elastic.co/elasticsearch/elasticsearch:6.8.0"
+    ports:
+      - "9200:9200"
+    environment:
+      - "discovery.type=single-node"
