--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "node app.js",
     "lint": "standard",
     "lint:fix": "standard --fix",
+    "init-es": "node src/init-es.js",
     "init-db": "node src/init-db.js",
     "drop-tables": "node src/scripts/drop-tables.js",
     "create-tables": "node src/scripts/create-tables.js",
+    "seed-es": "node src/scripts/seed-es.js",
     "seed-tables": "node src/scripts/seed-tables.js",
     "view-data": "node src/scripts/view-data.js",
     "mock-challenge-api": "NODE_ENV=test node mock/mock-challenge-api",
@@ -32,9 +34,11 @@
     "config": "^3.0.1",
     "cors": "^2.7.1",
     "dynamoose": "^1.7.2",
+    "elasticsearch": "^16.7.1",
     "express": "^4.16.4",
     "express-interceptor": "^1.2.0",
     "get-parameter-names": "^0.3.0",
+    "http-aws-es": "^6.0.0",
     "http-json-response": "^1.0.1",
     "http-status-codes": "^1.3.0",
     "joi": "^14.0.0",
