--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "nock": "^10.0.6"
   },
   "dependencies": {
-    "aws-sdk": "^2.692.0",
+    "aws-sdk": "^2.466.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.15.1",
     "config": "^3.0.1",
@@ -35,6 +35,7 @@
     "dynamoose": "^1.7.2",
     "elasticsearch": "^16.1.1",
     "express": "^4.16.4",
+    "http-aws-es": "^6.0.0",
     "express-interceptor": "^1.2.0",
     "get-parameter-names": "^0.3.0",
     "http-json-response": "^1.0.1",
