--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "dynamoose": "^1.7.2",
     "elasticsearch": "^16.1.1",
     "express": "^4.16.4",
-    "http-aws-es": "^6.0.0",
     "express-interceptor": "^1.2.0",
     "get-parameter-names": "^0.3.0",
+    "http-aws-es": "^6.0.0",
     "http-json-response": "^1.0.1",
     "http-status-codes": "^1.3.0",
     "joi": "^14.0.0",
@@ -48,6 +48,7 @@
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.2",
     "uuid": "^3.3.2",
     "winston": "^3.2.1",
+    "xss": "^1.0.7",
     "yamljs": "^0.3.0"
   },
   "engines": {
