Adding init-es as a script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "standard",
     "lint:fix": "standard --fix",
     "init-db": "node src/init-db.js",
+    "init-es": "node src/init-es.js",
     "drop-tables": "node src/scripts/drop-tables.js",
     "create-tables": "node src/scripts/create-tables.js",
     "seed-tables": "node src/scripts/seed-tables.js",
