Updating the getResources to be better at catching legacy IDs and not flooding the logs with output

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tc-bus-api-wrapper": "topcoder-platform/tc-bus-api-wrapper.git",
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.4",
     "uuid": "^3.3.2",
+    "uuidv4": "^6.2.3",
     "winston": "^3.2.1",
     "xss": "^1.0.7",
     "yamljs": "^0.3.0"
