--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -5,3 +5,10 @@ services:
     ports:
       - "7777:7777"
     command: "-inMemory -port 7777"
+  elasticsearch:
+    image: elasticsearch:6.8.13
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    environment:
+      discovery.type: "single-node"
