--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "view-data": "node src/scripts/view-data.js",
     "mock-challenge-api": "NODE_ENV=test node mock/mock-challenge-api",
     "test": "nyc --reporter=html --reporter=text mocha test/unit/test.js --require test/common/prepare.js --timeout 60000 --exit",
-    "e2e": "nyc --reporter=html --reporter=text mocha test/e2e/test.js --require test/common/prepare.js --timeout 60000 --exit"
+    "e2e": "nyc --reporter=html --reporter=text mocha test/e2e/test.js --require test/common/prepare.js --timeout 60000 --exit",
+    "test:newman": "node test/postman/newman.js"
   },
   "author": "TCSCODER",
   "license": "none",
@@ -25,6 +26,7 @@
     "should": "^13.2.3",
     "mocha": "^5.2.0",
     "mocha-prepare": "^0.1.0",
+    "newman": "^5.2.2",
     "nyc": "^14.0.0",
     "standard": "^12.0.1",
     "nock": "^10.0.6"
