--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,16 @@ builddeploy_steps: &builddeploy_steps
             ./buildenv.sh -e $DEPLOY_ENV -b ${LOGICAL_ENV}-${APPNAME}-deployvar
             source buildenvvar
             ./master_deploy.sh -d ECS -e $DEPLOY_ENV -t latest -s ${LOGICAL_ENV}-global-appvar,${LOGICAL_ENV}-${APPNAME}-appvar -i ${APPNAME}
+            #testing code changes
+            if [[ true ]]; then
+                ./buildenv.sh -e $DEPLOY_ENV -b ${LOGICAL_ENV}-qa-appvar
+                source buildenvvar  
+                curl --request POST \
+                  --url https://circleci.com/api/v2/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/pipeline \
+                  --header "Circle-Token: ${QA_USER_TOKEN}" \
+                  --header 'content-type: application/json' \
+                  --data '{"branch":"'"$CIRCLE_BRANCH"'","parameters":{"run_automatedtesting":true}}'
+            fi  
 
 
 jobs:
@@ -84,7 +94,12 @@ jobs:
 
 workflows:
   version: 2
+  parameters:
+  run_automatedtesting:
+    default: false
+    type: boolean
   build:
+    when: not << pipeline.parameters.run_automatedtesting >>
     jobs:
       # Development builds are executed on "develop" branch only.
       - "build-dev":
@@ -93,6 +108,7 @@ workflows:
             branches:
               only:
                 - develop
+                - dev-circleci
 
       # Production builds are exectuted only on tagged commits to the
       # master branch.
@@ -102,13 +118,12 @@ workflows:
             branches:
               only: master
 
+  testingflow:
+    when: << pipeline.parameters.run_automatedtesting >>
+    jobs:
       - "Run-Newman-Test":
-          context : org-global
-          requires:
-            - build-dev
-            - build-prod          
+          context : org-global        
           filters:
             branches:
               only:
-                - automated-postman-testing
-                - develop
+                - dev-circleci
