--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 parameters:
   run_automatedtesting:
     default: false
@@ -99,7 +99,8 @@ jobs:
 workflows:
   version: 2
   build:
-    when: not << pipeline.parameters.run_automatedtesting >>
+    when: 
+      - not << pipeline.parameters.run_automatedtesting >>
     jobs:
       # Development builds are executed on "develop" branch only.
       - "build-dev":
