--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,8 +99,7 @@ jobs:
 workflows:
   version: 2
   build:
-    when: 
-      - not: << pipeline.parameters.run_automatedtesting >>
+    when: not << pipeline.parameters.run_automatedtesting >>
     jobs:
       # Development builds are executed on "develop" branch only.
       - "build-dev":
