--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ parameters:
   run_automatedtesting:
     default: false
     type: boolean
+  run_basedeployment:
+    default: true
+    type: boolean
 defaults: &defaults
     docker:
       - image: circleci/python:2.7-stretch-browsers
@@ -52,7 +55,7 @@ builddeploy_steps: &builddeploy_steps
                   --url https://circleci.com/api/v2/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/pipeline \
                   --header "Circle-Token: ${QA_USER_TOKEN}" \
                   --header 'content-type: application/json' \
-                  --data '{"branch":"'"$CIRCLE_BRANCH"'","parameters":{"run_automatedtesting":true}}'
+                  --data '{"branch":"'"$CIRCLE_BRANCH"'","parameters":{"run_automatedtesting":true , "run_basedeployment": false}}'
             fi  
 
 
@@ -100,7 +103,7 @@ jobs:
 workflows:
   version: 2
   build:
-    when: not << pipeline.parameters.run_automatedtesting >>
+    when: << pipeline.parameters.run_basedeployment >>
     jobs:
       # Development builds are executed on "develop" branch only.
       - "build-dev":
