--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ builddeploy_steps: &builddeploy_steps
             ./master_deploy.sh -d ECS -e $DEPLOY_ENV -t latest -s ${LOGICAL_ENV}-global-appvar,${LOGICAL_ENV}-${APPNAME}-appvar -i ${APPNAME}
             #testing code changes
             if [[ true ]]; then
-                ./buildenv.sh -e $DEPLOY_ENV -b ${LOGICAL_ENV}-qa-appvar
+                ./buildenv.sh -e $DEPLOY_ENV -b ${LOGICAL_ENV}-qa-v1-appvar
                 source buildenvvar  
                 curl --request POST \
                   --url https://circleci.com/api/v2/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/pipeline \
