--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ workflows:
                 - develop
                 - dev-circleci
 
-      # Production builds are exectuted only on tagged commits to the
+      # Production builds are exectuted only on tagged commits to the testing
       # master branch.
       - "build-prod":
           context : org-global
