Updated postman tests + new circleci configs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,4 +133,5 @@ workflows:
           filters:
             branches:
               only:
+                - develop
                 - dev-circleci
