--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ install_dependency: &install_dependency
   command: |
     sudo apt install jq python-pip
     sudo pip install awscli --upgrade
-    sudo pip install docker-compose
+    # sudo pip install docker-compose
 install_deploysuite: &install_deploysuite
   name: Installation of install_deploysuite.
   command: |
