--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ defaults: &defaults
 install_dependency: &install_dependency
   name: Installation of build and deployment dependencies.
   command: |
-    sudo apt install jq python-pip
-    sudo pip install awscli --upgrade
+    sudo apt install jq python3-pip
+    sudo pip3 install awscli --upgrade
     # sudo pip install docker-compose
 install_deploysuite: &install_deploysuite
   name: Installation of install_deploysuite.
