--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,8 @@ jobs:
             cd mock
             (npm run mock-challenge-api&)
             (NODE_ENV=test npm start&)
-            npm run test:newman    
+            npm run test:newman:clear
+            npm run test:newman
 
 workflows:
   version: 2
