--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "should": "^13.2.3",
     "mocha": "^5.2.0",
     "mocha-prepare": "^0.1.0",
-    "newman": "^5.2.2",
     "nyc": "^14.0.0",
     "standard": "^12.0.1",
-    "nock": "^10.0.6"
+    "nock": "^10.0.6",
+    "tc-api-testing-lib": "topcoder-platform/api-automated-testing.git"
   },
   "dependencies": {
     "aws-sdk": "^2.466.0",
