fix artifacts on circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
             npm run test:newman
             npm run test:newman:clear
       - store_artifacts:
-          path: /newman
+          path: ./newman
 
 workflows:
   version: 2
