--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
+# Newman tests
+newman
+
 # nyc test coverage
 .nyc_output
 
