--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ parameters:
     default: true
     type: boolean
   run_basedeployment:
-    default: false
+    default: true
     type: boolean
 defaults: &defaults
     docker:
@@ -57,7 +57,7 @@ builddeploy_steps: &builddeploy_steps
                   --url https://circleci.com/api/v2/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/pipeline \
                   --header "Circle-Token: ${QA_USER_TOKEN}" \
                   --header 'content-type: application/json' \
-                  --data '{"branch":"'"$CIRCLE_BRANCH"'","parameters":{"run_automatedtesting":false, "run_basedeployment": false, run_performancetesting":true}}'
+                  --data '{"branch":"'"$CIRCLE_BRANCH"'","parameters":{"run_automatedtesting":false, "run_basedeployment": true, run_performancetesting":false}}'
             fi  
 
 
@@ -192,7 +192,7 @@ workflows:
   Performance Testing:
    when: << pipeline.parameters.run_performancetesting >>
    jobs:
-      # Performance Test is executed on "feature/performance" branch only.
+      # Performance Test is executed on "feature/performance" "develop" and "performance" branches only.
       - Hold [Performance-Testing]:
           type: approval
       - Performance-Testing:
