--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ parameters:
     default: false
     type: boolean
   run_performancetesting:
-    default: true
+    default: false
     type: boolean
   run_basedeployment:
     default: true
