--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,6 +165,7 @@ workflows:
               only:
                 - develop
                 - dev-circleci
+                - performance
 
       # Production builds are exectuted only on tagged commits to the testing
       # master branch.
