--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ builddeploy_steps: &builddeploy_steps
                   --url https://circleci.com/api/v2/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/pipeline \
                   --header "Circle-Token: ${QA_USER_TOKEN}" \
                   --header 'content-type: application/json' \
-                  --data '{"branch":"'"$CIRCLE_BRANCH"'","parameters":{"run_automatedtesting":false, "run_basedeployment": true, run_performancetesting":false}}'
+                  --data '{"branch":"'"$CIRCLE_BRANCH"'","parameters":{"run_automatedtesting":true, "run_basedeployment": false, run_performancetesting":true}}'
             fi  
 
 
@@ -165,7 +165,6 @@ workflows:
               only:
                 - develop
                 - dev-circleci
-                - performance
 
       # Production builds are exectuted only on tagged commits to the testing
       # master branch.
@@ -178,12 +177,12 @@ workflows:
   testingflow:
     when: << pipeline.parameters.run_automatedtesting >>
     jobs:
-      - Hold [Performance-Testing]:
+      - Hold [Newman-Testing]:
           type: approval
       - "Run-Newman-Test":
           context : org-global   
           requires:
-            - Hold [Performance-Testing]     
+            - Hold [Newman-Testing]     
           filters:
             branches:
               only:
@@ -197,6 +196,7 @@ workflows:
       - Hold [Performance-Testing]:
           type: approval
       - Performance-Testing:
+          context : org-global
           requires:
             - Hold [Performance-Testing]
           filters:
