run performance test for branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,4 +168,4 @@ workflows:
             branches:
               only:
                 - develop
-                - performance
+                - feature/performance-orb
