--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,7 +122,7 @@ workflows:
             branches:
               only:
                 - develop
-                - dev-circleci
+                - issue_reviewer_role
 
       # Production builds are exectuted only on tagged commits to the testing
       # master branch.
