deploy search after

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,6 +123,7 @@ workflows:
               only:
                 - develop
                 - fix-listmemberchallenges
+                - fix-search-after
 
       # Production builds are exectuted only on tagged commits to the testing
       # master branch.
