--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "TopCoder Challenge Resources V5 API",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "build:proto:resource-domain": "node bin/tc-resource-domain-client.js",
+    "build": "npm run build:proto:resource-domain && rimraf dist && tsc -b",
+    "start": "ts-node-dev --respawn --transpile-only app.js",
     "lint": "standard",
     "lint:fix": "standard --fix",
     "init-db": "node src/init-db.js",
@@ -29,7 +31,9 @@
     "nyc": "^14.0.0",
     "should": "^13.2.3",
     "standard": "^12.0.1",
-    "tc-api-testing-lib": "topcoder-platform/api-automated-testing.git"
+    "tc-api-testing-lib": "topcoder-platform/api-automated-testing.git",
+    "ts-node-dev": "^2.0.0",
+    "ts-proto": "^1.126.1"
   },
   "dependencies": {
     "aws-sdk": "^2.466.0",
@@ -37,6 +41,7 @@
     "body-parser": "^1.15.1",
     "config": "^3.0.1",
     "cors": "^2.7.1",
+    "dotenv": "^16.0.3",
     "dynamoose": "^1.7.2",
     "elasticsearch": "^16.1.1",
     "express": "^4.16.4",
@@ -54,7 +59,10 @@
     "uuid": "^8.3.0",
     "winston": "^3.2.1",
     "xss": "^1.0.7",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "grpc-server-reflection": "^0.1.5",
+    "@grpc/grpc-js": "^1.7.1",
+    "source-map-support": "^0.5.21"
   },
   "engines": {
     "node": "10.x"
@@ -71,5 +79,9 @@
       "test/unit/*.js",
       "test/e2e/*.js"
     ]
+  },
+  "volta": {
+    "node": "16.17.1",
+    "typescript": "4.8.4"
   }
 }
