--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ts-proto": "^1.126.1"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.7.1",
     "aws-sdk": "^2.466.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.15.1",
@@ -52,6 +53,7 @@
     "http-status-codes": "^1.3.0",
     "joi": "^14.0.0",
     "lodash": "^4.17.19",
+    "source-map-support": "^0.5.21",
     "superagent": "^4.1.0",
     "swagger-ui-express": "^4.1.3",
     "tc-bus-api-wrapper": "topcoder-platform/tc-bus-api-wrapper.git",
@@ -59,10 +61,7 @@
     "uuid": "^8.3.0",
     "winston": "^3.2.1",
     "xss": "^1.0.7",
-    "yamljs": "^0.3.0",
-    "grpc-server-reflection": "^0.1.5",
-    "@grpc/grpc-js": "^1.7.1",
-    "source-map-support": "^0.5.21"
+    "yamljs": "^0.3.0"
   },
   "engines": {
     "node": "10.x"
