--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.466.0",
+    "aws-xray-sdk": "^3.3.8",
     "bluebird": "^3.5.1",
     "body-parser": "^1.15.1",
     "config": "^3.0.1",
@@ -52,7 +53,7 @@
     "tc-bus-api-wrapper": "topcoder-platform/tc-bus-api-wrapper.git",
     "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.6",
     "uuid": "^8.3.0",
-    "winston": "^3.2.1",
+    "winston": "^3.8.2",
     "xss": "^1.0.7",
     "yamljs": "^0.3.0"
   },
