--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,6 +107,7 @@ workflows:
           branches:
             only:
             - develop
+            - fix/build
 
     # Production builds are exectuted only on tagged commits to the testing
     # master branch.
