ci: deploy to prod
Signed-off-by: Rakib Ansary <rakibansary@topcoder.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,7 +115,9 @@ workflows:
         context: org-global
         filters:
           branches:
-            only: master
+            only:
+            - master
+            - fix/build
 
   testingflow:
     when: << pipeline.parameters.run_automatedtesting >>
