feat: attempt to close registration phase
- advance registration phase if its open and past scheduled end time
- this scenario is possible when registration phase constraint has not been met

Signed-off-by: Rakib Ansary <rakibansary@topcoder.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,6 +107,7 @@ workflows:
           branches:
             only:
             - develop
+            - PLAT-2234
 
     # Production builds are exectuted only on tagged commits to the testing
     # master branch.
