--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,7 @@ workflows:
           branches:
             only:
             - develop
-            - PLAT-3501
+            - CORE-103
 
     # Production builds are exectuted only on tagged commits to the testing
     # master branch.
