ci: deploy CORE-65

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,6 +108,7 @@ workflows:
             only:
             - develop
             - CORE-103
+            - CORE-65
 
     # Production builds are exectuted only on tagged commits to the testing
     # master branch.
