Transition from ES-->OS for Opensearch consolidation

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "config": "^3.0.1",
     "cors": "^2.7.1",
     "dynamoose": "^1.7.2",
-    "elasticsearch": "^16.1.1",
+    "@opensearch-project/opensearch": "^2.11.0",
     "express": "^4.16.4",
     "express-interceptor": "^1.2.0",
     "get-parameter-names": "^0.3.0",
